--- a/example/template.html
+++ b/example/template.html
@@ -21,15 +21,35 @@
         .notifications__notification {
             padding: 5px 10px;
             box-sizing: border-box;
+            position: relative;
         }
+
+            .notifications__notification__close {
+                position: absolute;
+                top: 1px;
+                left: 11px;
+                width: 30px;
+                color: #cfd7d9;
+                padding: 4px;
+                font-size: 24px;
+                line-height: 1;
+                cursor: pointer;
+                border: none;
+                background: none;
+                outline: none;
+            }
 
             .notifications__notification__message {
                 background: #fff;
                 color: #333;
-                padding: 18px 30px 18px 40px;
+                padding: 18px;
                 border-radius: 3px;
                 box-shadow: 7px 5px 15px 0px rgba(0, 0, 0, 0.12);
                 border: 1px solid #e2e7ea;
+            }
+
+            .notifications__notification__close + .notifications__notification__message {
+                padding-left: 40px;
             }
     </style>
   </head>
