--- a/example/template.html
+++ b/example/template.html
@@ -24,20 +24,44 @@
             position: relative;
         }
 
-            .notifications__notification__close {
-                position: absolute;
-                top: 1px;
-                left: 11px;
-                width: 30px;
-                color: #cfd7d9;
-                padding: 4px;
-                font-size: 24px;
-                line-height: 1;
-                cursor: pointer;
-                border: none;
-                background: none;
-                outline: none;
+        .notifications__notification.is-showing-actions .notifications__notification__actions {
+            display: flex;
+        }
+
+            .notifications__notification__actions {
+                margin-top: 18px;
+                margin-left: -18px;
+                display: none;
             }
+
+            .notifications__notification__btn {
+                border-radius: 3px;
+                -moz-box-sizing: border-box;
+                -webkit-box-sizing: border-box;
+                box-sizing: border-box;
+                padding: 0 10px;
+                margin: 0 0 0 18px;
+                line-height: 32px;
+                height: 32px;
+                border: 1px solid #666;
+                text-align: center;
+                display: inline-block;
+                font-size: 12px;
+                font-weight: 400;
+                color: #333;
+                background: transparent;
+                outline: none;
+                text-decoration: none;
+                cursor: pointer;
+                font-family: "Open Sans", sans-serif;
+                flex: 1;
+            }
+
+                .notifications__notification__btn--success {
+                    background-color: #27ae60;
+                    border-color: #27ae60;
+                    color: #fff;
+                }
 
             .notifications__notification__message {
                 background: #fff;
