Correct class on container

--- a/example/template.html
+++ b/example/template.html
@@ -9,7 +9,7 @@
             font-family: 'Open Sans', sans-serif;
         }
 
-        .notifications__container {
+        .notifications {
             position: fixed;
             top: 11px;
             bottom: 0;
